#18 dependency fix, sql syntax fixes